<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="12sp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView

        android:id="@+id/arada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/arada"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />



    <TextView
        android:id="@+id/yeka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yeka"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView

        android:id="@+id/bole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bole"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />



    <TextView
        android:id="@+id/lideta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lideta"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/sub_city_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="your choice"
        android:inputType="numberDecimal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

</LinearLayout>