<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="12sp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView

        android:id="@+id/tigray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tigray"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />



    <TextView
        android:id="@+id/afar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/afar"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView

        android:id="@+id/amhara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amhara"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />



    <TextView
        android:id="@+id/oromia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oromia"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/region_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="your choice"
        android:inputType="numberDecimal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

</LinearLayout>