<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="12sp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView

        android:id="@+id/south_wollo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/south_wollo"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />



    <TextView
        android:id="@+id/north_wollo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/north_wollo"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView

        android:id="@+id/north_gondar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/north_gondar"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />



    <TextView
        android:id="@+id/south_gojjam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/south_gojjam"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/zone_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="your choice"
        android:inputType="numberDecimal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

</LinearLayout>